<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewRule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_cond"
        android:textSize="22dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonAddCond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="buttonAddCond_Clicked"
            android:text="@string/button_addCond" />

        <Button
            android:id="@+id/buttonRmCond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/button_rmCond" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="buttonFinish_Clicked"
        android:text="@string/button_rule" />

    <ListView
        android:id="@+id/listViewConds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>